--- a/UdemyCppPro-master/MyImplementation/CMake/10_UnitTests/src/my_lib/CMakeLists.txt
+++ b/UdemyCppPro-master/MyImplementation/CMake/10_UnitTests/src/my_lib/CMakeLists.txt
@@ -32,6 +32,13 @@ target_link_libraries(
           cxxopts::cxxopts
           Catch2::Catch2)
 
+if(ENABLE_WARNINGS)
+    target_set_warnings(
+        ${LIBRARY_NAME}
+        ON
+        OFF
+    )
+endif(ENABLE_WARNINGS)
 
 
 
